RESOLVED FIXED 117441
Fix build error and warning
https://bugs.webkit.org/show_bug.cgi?id=117441
Summary Fix build error and warning
Jaehun Lim
Reported 2013-06-10 16:40:24 PDT
Error: WebKit/Source/WebKit2/UIProcess/efl/WebViewEfl.cpp: In static member function ‘static WTF::PassRefPtr<WebKit::WebView> WebKit::WebView::create(WebKit::WebContext*, WebKit::WebPageGroup*)’: WebKit/Source/WebKit2/UIProcess/efl/WebViewEfl.cpp:49:54: error: cannot allocate an object of abstract type ‘WebKit::WebViewEfl’ WebKit/Source/WebKit2/UIProcess/efl/WebViewEfl.h:35:7: note: because the following virtual functions are pure within ‘WebKit::WebViewEfl’: WebKit/Source/WebKit2/UIProcess/PageClient.h:115:18: note: virtual void WebKit::PageClient::preferencesDidChange() WebKit/Source/WebKit2/UIProcess/efl/WebViewEfl.cpp:50:1: error: control reaches end of non-void function [-Werror=return-type] Warning: WebKit/Source/WebKit2/UIProcess/CoordinatedGraphics/WebView.cpp:392:31: warning: unused parameter ‘page’ [-Wunused-parameter]
Attachments
Patch (2.38 KB, patch)
2013-06-10 16:44 PDT, Jaehun Lim
no flags
Jaehun Lim
Comment 1 2013-06-10 16:44:33 PDT
Seokju Kwon
Comment 2 2013-06-10 16:48:54 PDT
*** Bug 117445 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 3 2013-06-10 17:45:53 PDT
The commit-queue encountered the following flaky tests while processing attachment 204225 [details]: platform/mac/editing/deleting/deletionUI-single-instance.html bug 114181 (author: rniwa@webkit.org) transitions/color-transition-rounding.html bug 114182 (author: simon.fraser@apple.com) transitions/cubic-bezier-overflow-svg-length.html bug 114183 (author: peter@chromium.org) transitions/interrupt-zero-duration.html bug 114184 (authors: cmarrin@apple.com, rniwa@webkit.org, and simon.fraser@apple.com) transitions/multiple-background-transitions.html bug 114185 (author: simon.fraser@apple.com) transitions/cubic-bezier-overflow-color.html bug 114186 (author: peter@chromium.org) transitions/multiple-shadow-transitions.html bug 114187 (author: simon.fraser@apple.com) transitions/mismatched-shadow-transitions.html bug 114188 (author: simon.fraser@apple.com) transitions/color-transition-all.html bug 114189 (authors: ossy@webkit.org and simon.fraser@apple.com) transitions/cubic-bezier-overflow-shadow.html bug 114191 (author: peter@chromium.org) transitions/min-max-width-height-transitions.html bug 114192 (author: simon.fraser@apple.com) transitions/cancel-transition.html bug 114193 (authors: ojan@chromium.org, rniwa@webkit.org, and simon.fraser@apple.com) transitions/border-radius-transition.html bug 114194 (author: simon.fraser@apple.com) transitions/flex-transitions.html bug 114195 (author: tony@chromium.org) transitions/mixed-type.html bug 114196 (author: mikelawther@chromium.org) transitions/multiple-mask-transitions.html bug 114197 (author: simon.fraser@apple.com) transitions/color-transition-premultiplied.html bug 114198 (author: simon.fraser@apple.com) transitions/mismatched-shadow-styles.html bug 114199 (author: simon.fraser@apple.com) transitions/mask-transitions.html bug 114200 (authors: ojan@chromium.org, oliver@apple.com, and simon.fraser@apple.com) transitions/cubic-bezier-overflow-length.html bug 114201 (author: peter@chromium.org) transitions/multiple-background-size-transitions.html bug 114202 (authors: mitz@webkit.org and simon.fraser@apple.com) transitions/clip-transition.html bug 114203 (authors: dglazkov@chromium.org, krit@webkit.org, and simon.fraser@apple.com) transitions/cubic-bezier-overflow-transform.html bug 114204 (author: peter@chromium.org) transitions/interrupted-accelerated-transition.html bug 56242 (authors: rniwa@webkit.org, simon.fraser@apple.com, and tonyg@chromium.org) transitions/background-transitions.html bug 114206 (author: simon.fraser@apple.com) http/tests/security/mixedContent/redirect-https-to-http-iframe-in-main-frame.html bug 114208 (authors: abarth@webkit.org and rniwa@webkit.org) http/tests/inspector/inspect-element.html bug 78869 (author: pfeldman@chromium.org) fast/loader/javascript-url-in-object.html bug 114210 (authors: rniwa@webkit.org and sam@webkit.org) compositing/overflow/overflow-compositing-descendant.html bug 116485 (authors: mihaip@chromium.org, rniwa@webkit.org, and simon.fraser@apple.com) compositing/reflections/load-video-in-reflection.html bug 117427 (authors: mihaip@chromium.org, rniwa@webkit.org, and simon.fraser@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2013-06-10 17:46:48 PDT
Comment on attachment 204225 [details] Patch Clearing flags on attachment: 204225 Committed r151413: <http://trac.webkit.org/changeset/151413>
WebKit Commit Bot
Comment 5 2013-06-10 17:46:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.