Fix build error and warning https://bugs.webkit.org/show_bug.cgi?id=117441

Patch by Jaehun Lim <ljaehun.lim@samsung.com> on 2013-06-10
Reviewed by Anders Carlsson.

* UIProcess/CoordinatedGraphics/WebView.cpp:
(WebKit::WebView::preferencesDidChange): Added.
(WebKit::WebView::createPopupMenuProxy): Remove 'page'.
* UIProcess/CoordinatedGraphics/WebView.h:

Canonical link: https://commits.webkit.org/135635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151413 268f45cc-cd09-0410-ab3c-d52691b4dbfc